# mew

./: .gitignore  Cargo.toml  README.md
crates/mew-api/: Cargo.toml
crates/mew-api/src/: api.rs
crates/mew-bundle/: Cargo.toml
crates/mew-bundle/src/: bundler.rs  lib.rs
crates/mew-dealias/: Cargo.toml
crates/mew-dealias/src/: dealias.rs  lib.rs
crates/mew-flatten/: Cargo.toml
crates/mew-flatten/src/: flatten.rs
crates/mew-inline/: Cargo.toml
crates/mew-inline/src/: inline.rs
crates/mew-mangle/: Cargo.toml
crates/mew-mangle/src/: lib.rs  mangle.rs
crates/mew-parse/: Cargo.toml
crates/mew-parse/src/: error.rs  lexer.rs  parser.rs  syntax.rs  syntax_display.rs  syntax_impl.rs  wgsl.lalrpop
crates/mew-resolve/: Cargo.toml
crates/mew-resolve/src/: resolver.rs
crates/mew-specialize/: Cargo.toml
crates/mew-specialize/src/: specialize.rs
crates/mew-template-normalize/: Cargo.toml
crates/mew-template-normalize/src/: normalize.rs
crates/mew-test/: Cargo.toml
crates/mew-test/dealias-inputs/: test-1.mew
crates/mew-test/expected-bundle-outputs/: bundled-with-root-module.mew  bundled-with-root-module.wesl  bundled-without-root-module.mew
crates/mew-test/expected-dealias-outputs/: test-1.mew  test-1.wesl
crates/mew-test/expected-extend-outputs/: test-1.mew
crates/mew-test/expected-flattener-outputs/: bundled-with-root-module.wgsl  bundled-without-root-module.wgsl  test-1.wgsl
crates/mew-test/expected-mangler-outputs/: bundled-with-root-module.mew  bundled-without-root-module.mew  test-1.mew
crates/mew-test/expected-resolver-outputs/: bundled-with-root-module.mew  bundled-with-root-module.wesl  bundled-without-root-module.mew  bundled-without-root-module.wesl  test-1.mew
crates/mew-test/expected-template-specialize-outputs/: test-1.wgsl  test-6.wgsl  test-7.wgsl
crates/mew-test/extend-inputs/: test-1.mew  test-1.wesl
crates/mew-test/mew-samples/: mod.mew  use-global.mew
crates/mew-test/src/: lib.rs
crates/mew-test/template-specialize-inputs/: test-1.mew  test-2.mew  test-3.mew  test-4.mew  test-5.mew  test-6.mew  test-7.mew
crates/mew-test/wesl-samples/: types.wesl  vertex.wesl
crates/mew-types/: Cargo.toml
crates/mew-types/src/: lib.rs  mangling.rs
crates/wesl-api/: Cargo.toml
crates/wesl-api/src/: api.rs
crates/wesl-bundle/: Cargo.toml
crates/wesl-bundle/src/: bundler.rs  file_system.rs  lib.rs
crates/wesl-dealias/: Cargo.toml
crates/wesl-dealias/src/: dealias.rs
crates/wesl-flatten/: Cargo.toml
crates/wesl-flatten/src/: flatten.rs
crates/wesl-inline/: Cargo.toml
crates/wesl-inline/src/: inline.rs
crates/wesl-mangle/: Cargo.toml
crates/wesl-mangle/src/: mangle.rs
crates/wesl-parse/: Cargo.toml
crates/wesl-parse/src/: error.rs  lexer.rs  lib.rs  parser.rs  parser_support.rs  span.rs  syntax.rs  syntax_display.rs  syntax_impl.rs  syntax_spanned.rs  wgsl.lalrpop  wgsl_recognize.lalrpop  wgsl_spanned.lalrpop
crates/wesl-resolve/: Cargo.toml
crates/wesl-resolve/src/: resolver.rs
crates/wesl-resolver/: Cargo.toml
crates/wesl-resolver/src/: resolver.rs
crates/wesl-specialize/: Cargo.toml
crates/wesl-specialize/src/: lib.rs  specialize.rs
crates/wesl-template-normalize/: Cargo.toml
crates/wesl-template-normalize/src/: lib.rs  normalize.rs
crates/wesl-template-specialize/: Cargo.toml
crates/wesl-test/: Cargo.toml
crates/wesl-test/dealias-inputs/: test-1.wesl
crates/wesl-test/expected-bundle-outputs/: bundled-with-root-module.wesl  bundled-without-root-module.wesl
crates/wesl-test/expected-dealias-outputs/: test-1.wesl
crates/wesl-test/expected-extend-outputs/: test-1.wesl
crates/wesl-test/expected-flattener-outputs/: bundled-with-root-module.wgsl  bundled-without-root-module.wgsl  test-1.wgsl
crates/wesl-test/expected-mangler-outputs/: bundled-with-root-module.wesl  bundled-without-root-module.wesl  test-1.wesl
crates/wesl-test/expected-outputs/: mod.wesl  types.wesl  vertex.wesl
crates/wesl-test/expected-resolver-outputs/: bundled-with-root-module.wesl  bundled-without-root-module.wesl  test-1.wesl
crates/wesl-test/expected-template-normalize-outputs/: test-1.wesl  test-2.wesl
crates/wesl-test/expected-template-specialize-outputs/: test-1.wesl  test-1.wgsl  test-2.wesl  test-2.wgsl  test-3.wesl  test-3.wgsl  test-4.wgsl  test-5.wgsl
crates/wesl-test/extend-inputs/: test-1.wesl
crates/wesl-test/src/: lib.rs  resolve.rs
crates/wesl-test/template-normalize-inputs/: test-1.wesl
crates/wesl-test/template-specialize-inputs/: test-1.wesl  test-2.wesl  test-3.wesl  test-4.wesl  test-5.wesl
crates/wesl-test/wesl-samples/: mod.wesl  use-global.wesl  vertex.wesl
crates/wesl-types/: Cargo.toml
crates/wesl-types/src/: builtins.rs  lib.rs  mangling.rs
crates/wgsl-parse/src/: lexer.rs  lib.rs  syntax.bnf  syntax.rs  syntax_display.rs  syntax_display_spanned.rs  syntax_spanned.rs  wgsl.lalrpop
crates/wgsl-test/src/: lib.rs
crates/wgsl-test/wesl-samples/: mod.wesl  types.wesl
src/: main.rs
