[workspace]
members = ["crates/wesl-parse", "crates/wesl-test", "crates/wesl-bundle", "crates/wesl-resolve", "crates/wesl-mangle", "crates/wesl-flatten", "crates/wesl-types"]

[workspace.package]
version = "0.0.2"
edition = "2021"
authors = ["Mathis Brossier <mathis.brossier@gmail.com>", "Natalie Cuthbert <natalie@cuthbert.co.za>"]
repository = "https://github.com/k2d222/wgsl-tools"
license = "MIT"

[workspace.dependencies]
im = "15.1.0" 

[package]
name = "wgsl-tools"
description = "Various tools to parse, verify, evaluate and modify wgsl shader source."
documentation = "https://docs.rs/wgsl-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
wesl-parse = { path = "crates/wesl-parse", version = "0.0.2" }
wesl-bundle  = { path = "crates/wesl-bundle", version = "0.0.2" }
wesl-resolve  = { path = "crates/wesl-resolve", version = "0.0.2" }
wesl-mangle  = { path = "crates/wesl-mangle", version = "0.0.2" }
wesl-flatten  = { path = "crates/wesl-flatten", version = "0.0.2" }
wesl-types  = { path = "crates/wesl-types", version = "0.0.2" }
tokio = { version="1.40.0", features=["macros", "rt-multi-thread"] }
