[package]
name = "mew-parse"
description = "Parse a wgsl source file to a syntax tree"
documentation = "https://docs.rs/wgsl-parse"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
annotate-snippets = "0.12.0"
itertools = "0.13.0"
lalrpop-util = "0.22.2"
lexical = { version = "7.0.4", features = ["format", "power-of-two"] }
logos = "0.15.1"
thiserror = "2.0.16"
indexmap = "2.11.0"

[build-dependencies]
lalrpop = { version = "0.22.2", default-features = false }
