[package]
name = "wesl-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.82"
wesl-parse = { path = '../wesl-parse' }
wesl-bundle = { path = '../wesl-bundle' }
wesl-resolve = { path = '../wesl-resolve' }
wesl-types = { path = '../wesl-types' }
wesl-mangle = { path = '../wesl-mangle' }
wesl-flatten = { path = '../wesl-flatten' }
wesl-dealias = { path = '../wesl-dealias' }
wesl-specialize = { path = '../wesl-specialize' }
wesl-template-normalize = { path = '../wesl-template-normalize' }
wesl-inline = { path = '../wesl-inline' }
im = { workspace = true }
naga = { version = "22.1", features = ["wgsl-in", "wgsl-out"] }
