[package]
name = "wesl-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
wesl-parse = { path = '../wesl-parse' }
wesl-bundle = { path = '../wesl-bundle' }
wesl-resolve = { path = '../wesl-resolve' }
wesl-types = { path = '../wesl-types' }
wesl-mangle = { path = '../wesl-mangle' }
wesl-flatten = { path = '../wesl-flatten' }
tokio = { version="1.40.0", features=["macros", "rt"] }
